# reproduce-glibc

./: default.nix
backend/: backend.cabal
static/: default.nix
static/src/: tailwind.config.js
static/src/css/: styles.css
static/src/html/: #test.html#  test.html~
static/src/html/landing/: Blog.html  aboutAce.html  base.html
static/src/html/landing/4/: bootcamps.html  community.html  recruitingFirms.html  u.html
static/src/js/: lib.js  lib.js~
static/src/node/: node-packages.nix  package.json
thunks/ClasshSS/: github.json
thunks/mmark-ext/: github.json  mmark-ext.cabal
thunks/mmark-ext/Text/MMark/Extension/: Comment.hs  FontAwesome.hs  Footnotes.hs  GhcSyntaxHighlighter.hs  Kbd.hs  LinkTarget.hs  MathJax.hs  ObfuscateEmail.hs  PunctuationPrettifier.hs  Skylighting.hs  TableOfContents.hs
thunks/obelisk-oauth/: github.json
thunks/reflex-classh/: github.json
thunks/rhyolite/: github.json
thunks/scrappy-core/: github.json
thunks/scrappy-template/: github.json
thunks/stripe/: github.json
