name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends:
                --aeson
               -- , aeson-gadt-th
               -- , async
               -- , base
               -- , base64-bytestring
               -- , beam-automigrate
               -- , beam-core
               -- , beam-postgres
               -- , bytestring
               -- , case-insensitive
               -- , clientsession
               -- , common
               -- , constraints-extras
               -- , containers
               -- , csv
               -- , constraints
               -- , dependent-sum
               -- , dependent-map
               -- , directory
               -- , email-validate
               -- , exceptions
               -- , extra
               -- , filepath
               -- , frontend
               -- , gargoyle-postgresql-connect
               -- , http-client
               -- , http-client-tls
               -- , http-types
               -- , HaskellNet
               -- , io-streams
               -- , lens
               -- , lifted-base
               -- , lucid
               -- , mime-mail
                mmark
               -- , mtl
               , mmark-ext
               -- , monad-logger
               -- , monoidal-containers
               -- , obelisk-backend
               -- , obelisk-executable-config-lookup
               -- , obelisk-oauth-backend
               -- , obelisk-oauth-common
               -- , obelisk-route
               -- , parsec
               -- , postgresql-lo-stream
               -- , postgresql-simple
               -- , postgresql-simple-interpolate
               -- , process
               -- , psql-simple-beam
               -- , psql-simple-class
               -- , random
               -- , reflex-dom-core
               -- , resource-pool
               -- , rhyolite-account-backend
               -- , rhyolite-account-types
               -- , rhyolite-backend
               -- , rhyolite-beam-db
               -- , rhyolite-beam-task-worker-backend
               -- , rhyolite-beam-task-worker-types
               -- , rhyolite-common
               -- , rhyolite-email
               -- , rhyolite-notify-listen
               -- , rhyolite-notify-listen-beam
               -- , scrappy-core
               -- , scrappy-template
               -- , semialign
               -- , semimap
               -- , signed-data
               -- , signed-data-clientsession
               -- , snap
               -- , snap-core
               -- , snap-extras
               -- , stripe-haskell
               -- , stripe-core
               -- , temporary
               -- , text
               -- , these
               -- , time
               -- , transformers
               -- , uuid
               -- , vessel
               -- , witherable-class
               -- , which
               -- , obelisk-generated-static
               -- , template-haskell
               -- , ClasshSS
               -- , reflex-classhss              
               -- , obelisk-asset-serve-snap
               -- , haskell-src-meta
               -- , raw-strings-qq
               -- , interpolatedstring-qq
               
  exposed-modules:
    Landing.StaticShell
    Landing.AboutUs
    Landing.Base
    Landing.For.Bootcamps
    Landing.For.Communities
    Landing.For.JobSeekers
    Landing.For.Recruiters

  
    Backend
    RhyConcurrent
    Backend.Config
    Backend.DB
    Backend.Utils
    Backend.Listen
    Backend.Payload
    Backend.Request
    Backend.View
    Backend.Types
    Backend.View.Chatroom
    Backend.View.Messages
    Backend.View.Contacts
    Backend.View.DMs
    Backend.View.ViewTimes
    Backend.Schema
    Backend.Workers
    Backend.Workers.SendEmail
    Backend.Workers.ProcessVideo
    Backend.Workers.ProcessVideo.GPT
    Backend.Handlers.Admin.AddUsers
    Backend.Handlers.Admin.CompanySignup
    Backend.Handlers.Admin.GetUserScores
    Backend.Handlers.CancelSubscription
    Backend.Handlers.ChangeSeniority
    Backend.Handlers.ChangeStream
    Backend.Handlers.Chat
    Backend.Handlers.GetDisplayName
    Backend.Handlers.GetQuestions
    Backend.Handlers.GetQuestionsPublic
    Backend.Handlers.GetReport
    Backend.Handlers.GetSummary
    Backend.Handlers.GetVideo
    Backend.Handlers.InterviewerMetrics
    Backend.Handlers.IsFreeTrialExpired
    Backend.Handlers.Leaderboard
    -- dead code? needs merge?
    Backend.Handlers.Login
    Backend.Handlers.NewFreeTrial
    Backend.Handlers.NewSubscriber
    Backend.Handlers.OAuth
    Backend.Handlers.ProcessVideo
    Backend.Handlers.Profile
    Backend.Handlers.ReadFeedback
    Backend.Handlers.RedeemLink
    Backend.Handlers.ReportExerciseComplete
    Backend.Handlers.ReportHire
    Backend.Handlers.ReportsDated
    -- Dead code? needs merge?
    Backend.Handlers.RequestPasswordReset
    Backend.Handlers.ResetPassword
    Backend.Handlers.ReviewQueue
    Backend.Handlers.SendLogs
    Backend.Handlers.SubmitOnboarding
    Backend.Handlers.WriteReportQuestion
    
    
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
  default-extensions:
      AllowAmbiguousTypes
    BangPatterns
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    EmptyCase
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators

    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    ScopedTypeVariables
    TemplateHaskell
    TypeFamilies

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  -- ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -threaded -fno-show-valid-hole-fits
  -- if impl(ghcjs)
  --   buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
