name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
                -- mmark
               , mmark-ext
  exposed-modules:
    Backend
    
  -- ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , backend
               -- , common
               -- , frontend
               -- , obelisk-backend
